Add Thumbnail & Row component

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@
 
 @layer base {
   body {
-    @apply bg-[#141414] text-white;
+    @apply bg-[#141414] text-white overflow-x-hidden;
   }
 
   header {
@@ -19,5 +19,9 @@
 
   .bannerButton {
     @apply flex items-center gap-x-2 rounded px-5 py-1.5 text-sm font-semibold transition hover:opacity-75 md:py-2.5 md:px-8 md:text-xl;
+  }
+
+  .scrollbar::-webkit-scrollbar {
+    display: none;
   }
 }
