--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,4 +24,8 @@
   .scrollbar::-webkit-scrollbar {
     display: none;
   }
+
+  .input {
+    @apply w-full rounded bg-[#333] px-5 py-3.5 placeholder-[gray] outline-none focus:bg-[#454545];
+  }
 }
